# Agentic-Code-Debugger

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  template.py  test_debugger.py
debug_agent/agent/: llm.py  parser.py  react_agent.py  schema.py
debug_agent/core/: analyzer.py  confidence_scorer.py  context_builder.py  dependency_graph.py  error_classifier.py  traceback_parser.py
debug_agent/observability/: debug_trace.py  logger.py  metrics.py  tracer.py
debug_agent/prompts/: react_prompt.py
debug_agent/sandbox/: sandbox_cleanup.py  sandbox_manager.py
debug_agent/tools/: backup_manager.py  dependency_installer.py  installer.py  linter.py  patcher.py  runner.py  venv_manager.py  web_search.py
debug_agent/utils/: dependency_utils.py  env_detector.py
debug_agent/validation/: fix_validator.py
